feat: put agreements
